changed q-collection to q-dataset

--- a/demo.html
+++ b/demo.html
@@ -20,7 +20,7 @@
             <q-field name="score"></q-field>
         </q-select>
         <q-from>
-            <q-collection name="collection1"></q-collection>
+            <q-dataset name="collection1"></q-dataset>
         </q-from>
         <q-where>
             <q-filter field="name" op="equals" value="Foo"></q-filter>
