--- a/solr-query.html
+++ b/solr-query.html
@@ -12,7 +12,7 @@ Element providing abstract query support for solr
             <q-field name="last_name"></q-field>
         </q-select>
         <q-from>
-            <q-collection name="person"></q-collection>
+            <q-dataset name="person"></q-dataset>
         </q-from>
         <q-where>
             <q-filter field="first_name" op="equals" value="Foo"></q-filter>
