--- a/solr-query.html
+++ b/solr-query.html
@@ -26,28 +26,36 @@ Element providing abstract query support for solr
 @status alpha
 @url http://blackhawkwebcomponents.github.io/solr-query
 -->
-<polymer-element name="solr-query" extends="query-base" attributes="outputQuery baseUrl searchText">
+<polymer-element name="solr-query" extends="query-base" attributes="outputQuery baseUrl facet">
     <template>
         <shadow></shadow>
     </template>
     <script>
         Polymer('solr-query', {
             /**
-             * Query search term string, used in q=
-             * @attribute searchText
-             * @type String
+             * This identifies whether or not to target facets
+             * @attribute facet
+             * @type Boolean
+             * @default true
              */
-            searchText: '*:*',
+            facet: true,
             updateOutputQuery: function() {
-                var fl = 'fl=';
-                for (var i = 0; i < this.selectFields.length; ++i) {
-                    if (i > 0 && this.selectFields.length > 1)
-                        fl += ',';
-                    fl += this.selectFields[i].expr;
+                var select='';
+                var limit='';
+                if (this.facet) {
+                    select += '&q=*:*&rows=0&facet=true';
+                    for (var i = 0; i < this.selectFields.length; ++i) {
+                        select += '&facet.field='+this.selectFields[i].expr;
+                    }
+
+                    if (this.limit != null && this.limit > 0) {
+                        limit += '&facet.limit='+this.limit;
+                    }
                 }
 
                 var dataset = this.fromDatasets[0].name;
 
+                /*
                 var facetQuery = '&facet=true';
                 for (var i = 0; i < this.whereConditions.length; ++i) {
                     var condition  = this.whereConditions[i];
@@ -58,9 +66,23 @@ Element providing abstract query support for solr
                         var op = ':';
                         facetQuery += "&facet.query="+condition.field + op + condition.value;
                     }
+                }*/
+
+                var where = '';
+                for (var i = 0; i < this.whereConditions.length; ++i) {
+                    var condition  = this.whereConditions[i];
+                    if (condition.value && condition.value != null && condition.value.trim().length > 0) {
+                        //TODO: put in function with case statement
+                        var op = ':';
+                        where += '&fq='+condition.field + op + '"'+condition.value+'"';
+                    }
                 }
 
-                this.outputQuery.url = this.baseUrl+dataset+"/select/?q="+this.searchText+facetQuery;
+                var debug = '';
+                if (this.debug)
+                    debug = '&indent=on';
+                var url = this.baseUrl+dataset+"/select/?wt=json"+select+where+limit+debug;
+                this.outputQuery.url = url;
             }
         });
     </script>
